--- a/assets/stylesheets/master.css
+++ b/assets/stylesheets/master.css
@@ -127,25 +127,6 @@ button:focus {
 font-family: 'Italianno', cursive;*/
 }
 
-.info-modal {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.info-modal p {
-  width: 600px;
-  margin-top: 200px;
-  text-align: center;
-}
-
-.info-modal li {
-  padding-top:10px;
-  text-align: center;
-}
-
-.info-modal a {
-  color: inherit;
-  text-decoration: none;
+.nav-menu h3{
+  margin-bottom: 15px;
 }
