Add css to info page

--- a/assets/stylesheets/master.css
+++ b/assets/stylesheets/master.css
@@ -130,3 +130,19 @@ font-family: 'Italianno', cursive;*/
 .nav-menu h3{
   margin-bottom: 15px;
 }
+
+.info-modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info-modal p {
+  padding-top: 100px;
+}
+
+.info-modal ul {
+  display: flex;
+  width: 300px;
+  justify-content: space-between;
+}
